--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 language: haxe
 
 haxe:
-  - "3.4.7"
+  - 4.1.2
   - "development"
 
 matrix:
@@ -15,13 +15,13 @@ install:
   - yes | haxelib install all
 
 script:
-  - npm lix use haxe $TRAVIS_HAXE_VERSION
+  - npm lix use haxe 4.1.2
   - npm run haxe build.hxml
 
 
-deploy:
-  - provider: script
-    haxe: 3.4.7
-    script: bash ./release_haxelib.sh $HAXELIB_PWD
-    on:
-      tags: true
+# deploy:
+#   - provider: script
+#     haxe: 4.1.2
+#     script: bash ./release_haxelib.sh $HAXELIB_PWD
+#     on:
+#       tags: true
