--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - yes | haxelib install all
 
 script:
-  - npm lix use haxe 4.1.2
+  - npm run lix use haxe 4.1.2
   - npm run haxe build.hxml
 
 
