--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ install:
   - yes | haxelib install all
 
 script:
-  - npm i
-  - npm run lix use haxe 4.1.2
-  - npm run haxe build.hxml
+  # - npm i
+  # - npm run lix use haxe 4.1.2
+  - haxe build.hxml
 
 
 # deploy:
