--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wrenparse",
   "version": "0.0.1",
   "scripts": {
+    "test": "bash build.sh",
     "haxe": "haxe",
     "neko": "neko",
     "postinstall": "lix download",
