Todo:Fix control flow corruption in stack that keeps the VM in a continuous loop.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wrenparse",
   "version": "0.0.1",
   "scripts": {
+    "build": "haxe build.hxml",
     "test": "bash build.sh",
     "haxe": "haxe",
     "neko": "neko",
